...
      key: globalKey,
      appBar: AppBar(
        title: TextField(
          autofocus: true,
          controller: inputController,
          focusNode: inputFocus,
          key: const Key('podcastSearch'),
          style: const TextStyle(
            color: Colors.white,
          ),
          decoration: InputDecoration(
            prefixIcon: Icon(userQuery.isEmpty ? Icons.search : Icons.trending_flat, color: Colors.white),
            hintText: 'Search for podcasts...',
...
              icon: const Icon(Icons.search, color: Colors.white),
              onPressed: () {
                setState(() {
                  timestamp = new DateTime.now().millisecondsSinceEpoch;
                });
              },
              tooltip: 'Search for Podcasts',
            ),
            IconButton(
              icon: const Icon(Icons.close, color: Colors.white),
              onPressed: () {
                setState(() {
                  userQuery = '';
...
