...
              Tab(
                icon: Icon(Icons.music_video),
                text: 'Podcast',
              ),
              Tab(
                icon: Icon(Icons.list),
                text: 'Episodes',
              ),
            ],
          ),
        ),
        body: TabBarView(
          children: <Widget>[
...
