...
  TextColumn get url => text().nullable()(); // TODO(eemp): to be deprecated, removed
}

@UseMoor(
  tables: [Podcasts],
  queries: {
    'podcastsFTS': "SELECT podcasts.* FROM (SELECT rowid, name FROM podcasts_fts WHERE podcasts_fts.name MATCH 'infinite monkey') AS fts LEFT JOIN podcasts ON (rowid = id)",
  },
)
class MyDatabase extends _$MyDatabase {
  // we tell the database where to store the data with this constructor
  MyDatabase() : super(_openConnection());

...
